@@ -1,3 +1,7 @@
+2007-03-05  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.dg/torture/builtin-convert-4.c: New test.
+
 2007-03-05  Ian Lance Taylor  <iant@google.com>
 
 	* gcc.c-torture/compile/pr31034.c: New test.
